fix: dark mode h3

--- a/app/globals.css
+++ b/app/globals.css
@@ -67,6 +67,7 @@ a {
 .dark-mode p,
 .dark-mode span,
 .dark-mode h4,
+.dark-mode h3,
 .dark-mode .logo {
   color: white;
 }
